native/comrak_bridge/flark_comrak_bridge.h

typedef struct FlarkV3EndpointHandle {
  uint32_t slot;
  uint32_t generation;
} FlarkV3EndpointHandle;
typedef struct FlarkV3EndpointConfig {
  uint32_t abi_version;
  uint32_t struct_size;
  uint32_t max_retired_sources;
  uint32_t max_retired_source_bytes;
  uint32_t arena_max_slots;
  uint32_t arena_max_live_payload_bytes;
  uint32_t arena_max_children_per_node;
  uint32_t checkpoint_spacing_utf16;
  uint32_t source_facts_max_checkpoints;
  uint32_t source_facts_max_pages;
  uint32_t source_facts_max_resident_bytes;
  uint32_t parser_profile;
  uint32_t reserved[4];
} FlarkV3EndpointConfig;
typedef struct FlarkV3SessionBinding {
  uint32_t document_session[4];
  uint32_t source_session_identity;
  uint32_t worker_generation;
} FlarkV3SessionBinding;
typedef struct FlarkV3DispatchReceipt {
  uint32_t correlation_id;
  uint32_t action;
  uint32_t outstanding_event_id;
  uint32_t outstanding_event_kind;
} FlarkV3DispatchReceipt;
typedef struct FlarkV3PollFuel {
  uint32_t maximum_source_bytes;
  uint32_t maximum_checkpoints;
  uint32_t maximum_retirement_transitions;
} FlarkV3PollFuel;
typedef struct FlarkV3PollReceipt {
  uint32_t source_bytes_examined;
  uint32_t source_bytes_buffered;
  uint32_t cursor_refills;
  uint32_t cursor_copy_bytes_upper_bound;
  uint32_t checkpoints_emitted;
  uint32_t source_fact_transitions;
  uint32_t released_source_leases;
  uint32_t released_source_bytes;
  uint32_t arena_transitions;
  uint32_t arena_nodes_reclaimed;
  uint32_t scan_complete;
  uint32_t certification;
  uint32_t cleanup_complete;
  uint32_t outstanding_event_id;
  uint32_t outstanding_event_kind;
} FlarkV3PollReceipt;
typedef struct FlarkV3CandidatePollReceipt {
  uint32_t transitions;
  uint32_t cleanup_complete;
  uint32_t outstanding_event_id;
  uint32_t outstanding_event_kind;
} FlarkV3CandidatePollReceipt;
uint32_t flark_v3_endpoint_native_abi_version(void);
uint32_t flark_v3_endpoint_config_standard(
    FlarkV3EndpointConfig* out_config);
uint32_t flark_v3_endpoint_create(
    const FlarkV3EndpointConfig* config,
    FlarkV3EndpointHandle* out_handle);
uint32_t flark_v3_endpoint_recover(
    const FlarkV3EndpointConfig* config,
    const FlarkV3SessionBinding* previous_binding,
    FlarkV3EndpointHandle* out_handle);
/* input_ptr may be null only when input_len is zero. */
uint32_t flark_v3_endpoint_dispatch(
    FlarkV3EndpointHandle handle,
    const uint8_t* input_ptr,
    uint32_t input_len,
    FlarkV3DispatchReceipt* out_receipt);
/* Accepts only a terminal schema-2 HostPoll response. Parser-event receipts
 * remain schema-3 commands handled by flark_v3_endpoint_dispatch. */
uint32_t flark_v3_endpoint_dispatch_host_poll(
    FlarkV3EndpointHandle handle,
    const uint8_t* input_ptr,
    uint32_t input_len,
    FlarkV3DispatchReceipt* out_receipt);
/* Accepts only a terminal schema-4 inline-sidecar HostPoll response. */
uint32_t flark_v3_endpoint_dispatch_inline_sidecar_host_poll(
    FlarkV3EndpointHandle handle,
    const uint8_t* input_ptr,
    uint32_t input_len,
    FlarkV3DispatchReceipt* out_receipt);
/* Accepts only a terminal VPB1 viewport-presentation HostPoll response. */
uint32_t flark_v3_endpoint_dispatch_viewport_presentation_host_poll(
    FlarkV3EndpointHandle handle,
    const uint8_t* input_ptr,
    uint32_t input_len,
    FlarkV3DispatchReceipt* out_receipt);
/* Source-byte and checkpoint fuel must both be nonzero and no greater than
 * their declared maxima. Retirement fuel may be zero. */
uint32_t flark_v3_endpoint_poll(
    FlarkV3EndpointHandle handle,
    FlarkV3PollFuel fuel,
    FlarkV3PollReceipt* out_receipt);
/* Candidate work is independently fuelled and never consumes source-byte or
 * checkpoint grants. maximum_transitions must be in [1, 256]. */
uint32_t flark_v3_endpoint_poll_candidate(
    FlarkV3EndpointHandle handle,
    uint32_t maximum_transitions,
    FlarkV3CandidatePollReceipt* out_receipt);
/* On a too-small buffer, out_written receives the required size and the
 * outstanding event remains replayable. A null buffer is valid only at zero
 * capacity, which provides an allocation-free size query. */
uint32_t flark_v3_endpoint_encode(
    FlarkV3EndpointHandle handle,
    uint8_t* output_ptr,
    uint32_t output_capacity,
    uint32_t* out_written);
/* Accepts only an exact FLK3 close command; other opcodes do not mutate.
 * input_ptr may be null only when input_len is zero. */
uint32_t flark_v3_endpoint_close(
    FlarkV3EndpointHandle handle,
    const uint8_t* input_ptr,
    uint32_t input_len,
    FlarkV3DispatchReceipt* out_receipt);
/* Normal removal succeeds only after the accepted Closed receipt. */
uint32_t flark_v3_endpoint_remove(FlarkV3EndpointHandle handle);
/* Abnormal finalization only; this may perform unmetered containment work.
 * BACKPRESSURE means an operation still owns the endpoint: the handle remains
 * live and no slot was recycled, so an explicit caller may retry later. */
uint32_t flark_v3_endpoint_emergency_destroy(FlarkV3EndpointHandle handle);
/* NativeFinalizer integration uses an opaque heap token that contains only the
 * generation-checked handle, never an Endpoint pointer. The endpoint itself is
 * resolved through the registry when the callback runs.
 *
 * A successful create transfers exactly-once token ownership to the caller.
 * If the finalizer is detached, consume the token with token_release. If it
 * remains attached, NativeFinalizer calls emergency_finalize, whose null token
 * case is an explicit no-op. Dart wrappers must keep their owner reachable
 * through each FFI operation (for example with reachabilityFence) so the
 * callback cannot race an active endpoint operation. A callback race fails
 * closed without recycling the still-live slot. */
uint32_t flark_v3_endpoint_finalizer_token_create(
    FlarkV3EndpointHandle handle,
    void** out_token);
uint32_t flark_v3_endpoint_finalizer_token_release(void* token);
void flark_v3_endpoint_emergency_finalize(void* token);