legacy/root_package/lib/src/v3/runtime/native/flark_v3_native_endpoint_bindings.dart


  static FlarkV3NativePollReceipt _pollReceipt(_NativePollReceipt value) =>
      FlarkV3NativePollReceipt(
        sourceBytesExamined: value.sourceBytesExamined,
        sourceBytesBuffered: value.sourceBytesBuffered,
        cursorRefills: value.cursorRefills,
        cursorCopyBytesUpperBound: value.cursorCopyBytesUpperBound,
        checkpointsEmitted: value.checkpointsEmitted,
        sourceFactTransitions: value.sourceFactTransitions,
        releasedSourceLeases: value.releasedSourceLeases,
        releasedSourceBytes: value.releasedSourceBytes,
        arenaTransitions: value.arenaTransitions,
        arenaNodesReclaimed: value.arenaNodesReclaimed,
        scanComplete: value.scanComplete != 0,
        certification: value.certification,
        cleanupComplete: value.cleanupComplete != 0,
        outstandingEventId: value.outstandingEventId,
        outstandingEventKind: value.outstandingEventKind,
      );

  static void _requireOk(String operation, int status) {
    if (status != flarkV3NativeStatusOk) {
      throw FlarkV3NativeEndpointException(
        operation: operation,
        status: status,
      );
    }
  }
}

final class _NativeEndpointHandle extends Struct {
  @Uint32()
  external int slot;

  @Uint32()
  external int generation;
}

final class _NativeEndpointConfig extends Struct {
  @Uint32()
  external int abiVersion;

  @Uint32()
  external int structSize;

  @Uint32()
  external int maxRetiredSources;

  @Uint32()
  external int maxRetiredSourceBytes;

  @Uint32()
  external int arenaMaxSlots;

  @Uint32()
  external int arenaMaxLivePayloadBytes;

  @Uint32()
  external int arenaMaxChildrenPerNode;

  @Uint32()
  external int checkpointSpacingUtf16;

  @Uint32()
  external int sourceFactsMaxCheckpoints;

  @Uint32()
  external int sourceFactsMaxPages;

  @Uint32()
  external int sourceFactsMaxResidentBytes;

  @Uint32()
  external int parserProfile;

  @Array(4)
  external Array<Uint32> reserved;
}

final class _NativeSessionBinding extends Struct {
  @Array(4)
  external Array<Uint32> documentSession;

  @Uint32()
  external int sourceSessionIdentity;

  @Uint32()
  external int workerGeneration;
}

final class _NativeDispatchReceipt extends Struct {
  @Uint32()
  external int correlationId;

  @Uint32()
  external int action;

  @Uint32()
  external int outstandingEventId;

  @Uint32()
  external int outstandingEventKind;
}

final class _NativePollFuel extends Struct {
  @Uint32()
  external int maximumSourceBytes;

  @Uint32()
  external int maximumCheckpoints;

  @Uint32()
  external int maximumRetirementTransitions;
}

final class _NativePollReceipt extends Struct {
  @Uint32()
  external int sourceBytesExamined;

  @Uint32()
  external int sourceBytesBuffered;

  @Uint32()
  external int cursorRefills;

  @Uint32()
  external int cursorCopyBytesUpperBound;

  @Uint32()
  external int checkpointsEmitted;

  @Uint32()
  external int sourceFactTransitions;

  @Uint32()
  external int releasedSourceLeases;

  @Uint32()
  external int releasedSourceBytes;

  @Uint32()
  external int arenaTransitions;

  @Uint32()
  external int arenaNodesReclaimed;

  @Uint32()
  external int scanComplete;

  @Uint32()
  external int certification;

  @Uint32()
  external int cleanupComplete;

  @Uint32()
  external int outstandingEventId;

  @Uint32()
  external int outstandingEventKind;
}

final class _NativeCandidatePollReceipt extends Struct {
  @Uint32()
  external int transitions;

  @Uint32()
  external int cleanupComplete;

  @Uint32()
  external int outstandingEventId;

  @Uint32()
  external int outstandingEventKind;
}

typedef _AbiVersionNative = Uint32 Function();
typedef _AbiVersionDart = int Function();
typedef _CheckpointBProbeNative =
    Uint32 Function(
      Pointer<Uint8> output,
      Uint32 outputCapacity,
      Pointer<Uint32> written,
    );
typedef _CheckpointBProbeDart =
    int Function(
      Pointer<Uint8> output,
      int outputCapacity,
      Pointer<Uint32> written,
    );
typedef _StandardConfigNative =
    Uint32 Function(Pointer<_NativeEndpointConfig> output);
typedef _StandardConfigDart =
    int Function(Pointer<_NativeEndpointConfig> output);
typedef _CreateNative =
    Uint32 Function(
      Pointer<_NativeEndpointConfig> config,
      Pointer<_NativeEndpointHandle> output,
    );
typedef _CreateDart =
    int Function(
      Pointer<_NativeEndpointConfig> config,
      Pointer<_NativeEndpointHandle> output,
    );
typedef _RecoverNative =
    Uint32 Function(
      Pointer<_NativeEndpointConfig> config,
      Pointer<_NativeSessionBinding> previous,
      Pointer<_NativeEndpointHandle> output,
    );
typedef _RecoverDart =
    int Function(
      Pointer<_NativeEndpointConfig> config,
      Pointer<_NativeSessionBinding> previous,
      Pointer<_NativeEndpointHandle> output,
    );
typedef _DispatchNative =
    Uint32 Function(
      _NativeEndpointHandle handle,
      Pointer<Uint8> input,
      Uint32 inputLength,
      Pointer<_NativeDispatchReceipt> output,
    );
typedef _DispatchDart =
    int Function(
      _NativeEndpointHandle handle,
      Pointer<Uint8> input,
      int inputLength,
      Pointer<_NativeDispatchReceipt> output,
    );
typedef _PollNative =
    Uint32 Function(
      _NativeEndpointHandle handle,
      _NativePollFuel fuel,
      Pointer<_NativePollReceipt> output,
    );
typedef _PollDart =
    int Function(
      _NativeEndpointHandle handle,
      _NativePollFuel fuel,
      Pointer<_NativePollReceipt> output,
    );
typedef _CandidatePollNative =
    Uint32 Function(
      _NativeEndpointHandle handle,
      Uint32 maximumTransitions,
      Pointer<_NativeCandidatePollReceipt> output,
    );
typedef _CandidatePollDart =
    int Function(
      _NativeEndpointHandle handle,
      int maximumTransitions,
      Pointer<_NativeCandidatePollReceipt> output,
    );
typedef _EncodeNative =
    Uint32 Function(
      _NativeEndpointHandle handle,
      Pointer<Uint8> output,
      Uint32 outputCapacity,
      Pointer<Uint32> written,
    );
typedef _EncodeDart =
    int Function(
      _NativeEndpointHandle handle,
      Pointer<Uint8> output,
      int outputCapacity,
      Pointer<Uint32> written,
    );
typedef _DestroyNative = Uint32 Function(_NativeEndpointHandle handle);
typedef _DestroyDart = int Function(_NativeEndpointHandle handle);
typedef _FinalizerTokenCreateNative =
    Uint32 Function(
      _NativeEndpointHandle handle,
      Pointer<Pointer<Void>> output,
    );
typedef _FinalizerTokenCreateDart =
    int Function(_NativeEndpointHandle handle, Pointer<Pointer<Void>> output);
typedef _FinalizerTokenReleaseNative = Uint32 Function(Pointer<Void> token);
typedef _FinalizerTokenReleaseDart = int Function(Pointer<Void> token);

final class _FlarkV3NativeSymbols {
  const _FlarkV3NativeSymbols({
    required this.abiVersion,
    required this.standardConfig,
    required this.create,
    required this.recover,
    required this.dispatch,
    required this.dispatchHostPoll,
    required this.dispatchInlineSidecarHostPoll,
    required this.dispatchViewportPresentationHostPoll,
    required this.poll,
    required this.pollCandidate,
    required this.encode,
    required this.close,
    required this.remove,
    required this.emergencyDestroy,
    required this.finalizerTokenCreate,
    required this.finalizerTokenRelease,
    required this.emergencyFinalize,
  });

  factory _FlarkV3NativeSymbols.fromLibrary(
    DynamicLibrary library,
  ) => _FlarkV3NativeSymbols(
    abiVersion: library.lookupFunction<_AbiVersionNative, _AbiVersionDart>(
      'flark_v3_endpoint_native_abi_version',
    ),
    standardConfig: library
        .lookupFunction<_StandardConfigNative, _StandardConfigDart>(
          'flark_v3_endpoint_config_standard',
        ),
    create: library.lookupFunction<_CreateNative, _CreateDart>(
      'flark_v3_endpoint_create',
    ),
    recover: library.lookupFunction<_RecoverNative, _RecoverDart>(
      'flark_v3_endpoint_recover',
    ),
    dispatch: library.lookupFunction<_DispatchNative, _DispatchDart>(
      'flark_v3_endpoint_dispatch',
    ),
    dispatchHostPoll: library.lookupFunction<_DispatchNative, _DispatchDart>(
      'flark_v3_endpoint_dispatch_host_poll',
    ),
    dispatchInlineSidecarHostPoll: library
        .lookupFunction<_DispatchNative, _DispatchDart>(
          'flark_v3_endpoint_dispatch_inline_sidecar_host_poll',
        ),
    dispatchViewportPresentationHostPoll: library
        .lookupFunction<_DispatchNative, _DispatchDart>(
          'flark_v3_endpoint_dispatch_viewport_presentation_host_poll',
        ),
    poll: library.lookupFunction<_PollNative, _PollDart>(
      'flark_v3_endpoint_poll',
    ),
    pollCandidate: library
        .lookupFunction<_CandidatePollNative, _CandidatePollDart>(
          'flark_v3_endpoint_poll_candidate',
        ),
    encode: library.lookupFunction<_EncodeNative, _EncodeDart>(
      'flark_v3_endpoint_encode',
    ),
    close: library.lookupFunction<_DispatchNative, _DispatchDart>(
      'flark_v3_endpoint_close',
    ),
    remove: library.lookupFunction<_DestroyNative, _DestroyDart>(
      'flark_v3_endpoint_remove',
    ),
    emergencyDestroy: library.lookupFunction<_DestroyNative, _DestroyDart>(
      'flark_v3_endpoint_emergency_destroy',
    ),
    finalizerTokenCreate: library
        .lookupFunction<_FinalizerTokenCreateNative, _FinalizerTokenCreateDart>(
          'flark_v3_endpoint_finalizer_token_create',
        ),
    finalizerTokenRelease: library
        .lookupFunction<
          _FinalizerTokenReleaseNative,
          _FinalizerTokenReleaseDart
        >('flark_v3_endpoint_finalizer_token_release'),
    emergencyFinalize: library
        .lookup<NativeFunction<Void Function(Pointer<Void>)>>(
          'flark_v3_endpoint_emergency_finalize',
        ),
  );

  final _AbiVersionDart abiVersion;
  final _StandardConfigDart standardConfig;
  final _CreateDart create;
  final _RecoverDart recover;
  final _DispatchDart dispatch;
  final _DispatchDart dispatchHostPoll;
  final _DispatchDart dispatchInlineSidecarHostPoll;
  final _DispatchDart dispatchViewportPresentationHostPoll;
  final _PollDart poll;
  final _CandidatePollDart pollCandidate;
  final _EncodeDart encode;
  final _DispatchDart close;
  final _DestroyDart remove;
  final _DestroyDart emergencyDestroy;
  final _FinalizerTokenCreateDart finalizerTokenCreate;
  final _FinalizerTokenReleaseDart finalizerTokenRelease;
  final Pointer<NativeFunction<Void Function(Pointer<Void>)>> emergencyFinalize;
}
